# SchemaShift-GRPO

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  REVIEW.md  pyproject.toml  requirements.txt
configs/: README.md  agent_loop.yaml  ds_zero2.json  exp2_sft.yaml  exp2_sft_smoke.yaml  exp3_vanilla_grpo.yaml  exp4_schemashift.yaml  exp5_aug_only.yaml  grpo_smoke.yaml  grpo_train.yaml  sft_cold_start_4b.yaml
configs/live_mcp/: backend_live.yaml  backend_replay.yaml  banking.yaml  calendar.yaml  crm.yaml  email.yaml  filesystem.yaml  food_delivery.yaml  issue_tracker.yaml  payments.yaml  shopping.yaml  suite_mvp.yaml  team_chat.yaml
data/: README.md
docs/: OVAL-MCP.md  ablation_plan.md  live_mcp_branch.md  live_mcp_spec.md  project_plan.md  project_status.md  technical_report.md  toucan_fallback_decision.md
docs/archive/: arl.requirements.bak.txt  review.md
scripts/: __init__.py  audit_prove.py  build_parquet.py  check_data.py  check_dependency_conflicts.py  check_environment.py  compute_full_stats.py  convert_toolace.py  download_data.py  download_toolace.py  download_toucan.py  generate_data.py  generate_data.sh  generate_data_nightly.sh  generate_data_parallel.sh  generate_live_mcp_tasks.py  generate_perturbations.py  gpu_config.sh  inspect_prompts.py  inspect_toucan.py  plot_results.py  prepare_grpo_data.py  review_gen.py  run_grpo.sh  run_grpo_smoke.sh  run_live_mcp_smoke.py  setup.sh  sft_cold_start.py  test_runner.py  train_grpo.py  train_grpo.sh  train_runner.py  verify_fixes.py  verify_sft_generation.py  verify_sft_quality.py
scripts/eval/: eval_zero_shot.py
src/: __init__.py  utils.py
src/agent_loop/: __init__.py  bfcl_agent_loop.py  livemcp_oval_loop.py  oval_mcp_worker.py
src/data/: __init__.py  conditioned_builder.py  distractor_sampler.py  episode_schema.py  episode_seed_builder.py  sft_step_exporter.py
src/envs/: __init__.py  api_mapper.py  bfcl_env.py  mcp_tool_environment.py  replay_mcp_executor.py  schema_perturber.py
src/eval/: __init__.py  bfcl_eval.py  matching.py
src/live_mcp/: __init__.py  agent_loop.py  api.py  config.py  (+19 more)
tests/: test_action_parser.py  test_advantage.py  test_all_domains.py  test_api_mapper.py  test_component_reward.py  test_data_builder.py  test_enum_mapping.py  test_episode_schema.py  test_grpo_framework_e2e.py  test_length_check.py  test_livemcp_grpo_estimator.py  test_register_estimator_integration.py  test_reward_contract.py  test_rl_pipeline_integration.py  test_runtime_regressions.py  test_schema_perturber.py  test_schemashift_grpo_estimator.py  test_schemashift_reward_fn.py  test_sft_exporter.py  test_smoke_grpo_imports.py  test_stratified_advantage.py  test_training_data_contract.py
(+59 files in other folders)
