[project]
name = "schemashift-grpo"
version = "0.1.0"
description = "SchemaShift-GRPO:面向MCP Tool Schema鲁棒性的GRPO训练优化"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.7.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "loguru>=0.7.0",
    "pyarrow>=14.0",
    "pandas>=2.0",
    "huggingface_hub>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.0",
    "matplotlib>=3.7",
]
train = [
    "transformers>=4.40",
    "datasets>=2.14",
    "wandb>=0.15",
]
verl = [
    "verl>=0.6.1",
    "vllm>=0.6.0",
    "ray>=2.10",
]
bfcl = [
    "bfcl-eval>=2025.10",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
