[project]
name = "schemashift-grpo"
version = "0.1.0"
description = "SchemaShift-GRPO: MCP-Tools-Aware Tool-Use RL via Schema Perturbation + Verifiable Reward"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch==2.8.0",
    "numpy==1.26.4",
    "pyyaml==6.0.3",
    "pydantic==2.12.5",
    "loguru==0.7.3",
    "packaging==25.0",
    "einops==0.8.0",
    "scipy==1.13.0",
    "safetensors==0.7.0",
    "hydra-core==1.3.3",
    "omegaconf==2.3.0",
    "pyarrow==23.0.1",
    "pandas==2.2.3",
    "huggingface_hub==0.36.2",
    "protobuf==5.29.6",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.0",
    "pytest-cov==7.1.0",
    "black>=24.0",
    "ruff>=0.6.5",
    "mypy>=1.11.1",
    "pre-commit>=4.6.0",
    "matplotlib>=3.9.2",
]
train = [
    "transformers==4.57.6",
    "tokenizers==0.22.2",
    "datasets==4.8.4",
    "trl==0.29.1",
    "peft==0.18.1",
    "accelerate==1.13.0",
    "tensorboard==2.20.0",
    "wandb==0.26.0",
]
rl = [
    # verl 从项目内 ./verl 源码 editable 安装: pip install -e ./verl
    "vllm==0.11.0",
    "ray==2.54.1",
    "tensordict==0.10.0",
    "flashinfer-python==0.6.4",
    "xformers==0.0.32.post1",
    "deepspeed==0.19.2",
    "lm-format-enforcer==0.11.3",
    "compressed-tensors==0.11.0",
    "xgrammar==0.1.25",
    "flash-attn==2.7.3",
]
bfcl = [
    "bfcl-eval>=2025.10",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
